--- a/src/app/Paginas/Body/login/login.component.html
+++ b/src/app/Paginas/Body/login/login.component.html
@@ -36,6 +36,9 @@
           </div>
         </form>
       </div>
+      <div class="d-flex justify-content-center align-content-center mt-5">
+        <button type="button" class="btn btn-outline-info border-0 ">¿ Olvido su contraseña ?</button>
+      </div>
     </div>
   </div>
 </div>
