--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/categories/categories.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/categories/categories.component.html
@@ -16,41 +16,141 @@
 <div class="container text-center" *ngIf="categoriesService.Categories.length == 0" style="margin-top: 200px;">
   <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
-<div *ngIf="categoriesService.Categories.length > 0">
-  <table class="table table-hover ">
+<div *ngIf="categoriesService.Categories.length > 0" class="overflow-x-scroll">
+  <table class="table table-hover table-fixed-xl">
     <thead class="thead-dark">
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
-      <th scope="col" class="Encabezado-Tabla">Cantidad repetida</th>
-      <th scope="col" class="Encabezado-Tabla">Id Backup</th>
-      <th scope="col" class="Encabezado-Tabla">id_category</th>
-      <th scope="col" class="Encabezado-Tabla">id_account</th>
-      <th scope="col" class="Encabezado-Tabla">Nombre</th>
-      <th scope="col" class="Encabezado-Tabla">Tipo</th>
-      <th scope="col" class="Encabezado-Tabla">Numero</th>
-      <!--th scope="col" class="Encabezado-Tabla">Operación</th-->
+      <th scope="col" class="Encabezado-Tabla font-italic">Repeated</th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Id_Account
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="categoriesService.actionFilterEvent($event, 'indexAccount')">
+            <option value="-1" *ngIf="categoriesService.AccountsBackup.length > 0">Todas</option>
+            <option *ngFor="let account of categoriesService.AccountsBackup; let i = index" [value]="i">{{account.id_account}}</option>
+          </select>
+          <button type="button" [ngClass]="(categoriesService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('indexAccount')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Account
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="categoriesService.actionFilterEvent($event, 'indexAccount')">
+            <option value="-1" *ngIf="categoriesService.AccountsBackup.length > 0">Todas</option>
+            <option *ngFor="let account of categoriesService.AccountsBackup; let i = index" [value]="i">{{account.name}}</option>
+          </select>
+          <button type="button" [ngClass]="(categoriesService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('indexAccount')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Id_Category
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="categoriesService.actionFilterEvent($event, 'id_category')">
+            <ng-container *ngIf="util.numberFormat(categoriesService.filtersSearch.indexAccount.value) == -1">
+              <option value="0">Todas</option>
+              <ng-container *ngFor="let account of categoriesService.AccountsBackup">
+                <option *ngFor="let category of account.categoriesAccount" [value]="category.id_category">{{category.id_category}}</option>
+              </ng-container>
+            </ng-container>
+            <ng-container *ngIf="util.numberFormat(categoriesService.filtersSearch.indexAccount.value) != -1">
+              <option value="0" *ngIf="categoriesService.AccountsBackup[util.numberFormat(categoriesService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+              <option *ngFor="let category of categoriesService.AccountsBackup[util.numberFormat(categoriesService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">{{category.id_category}}</option>
+            </ng-container>
+          </select>
+          <button type="button" [ngClass]="(categoriesService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('id_category')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Name
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="categoriesService.actionFilterEvent($event, 'id_category')">
+            <ng-container *ngIf="util.numberFormat(categoriesService.filtersSearch.indexAccount.value) == -1">
+              <option value="0">Todas</option>
+              <ng-container *ngFor="let account of categoriesService.AccountsBackup">
+                <option *ngFor="let category of account.categoriesAccount" [value]="category.id_category">[{{category.sign}}] {{category.name}}</option>
+              </ng-container>
+            </ng-container>
+            <ng-container *ngIf="util.numberFormat(categoriesService.filtersSearch.indexAccount.value) != -1">
+              <option value="0" *ngIf="categoriesService.AccountsBackup[util.numberFormat(categoriesService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+              <option *ngFor="let category of categoriesService.AccountsBackup[util.numberFormat(categoriesService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">[{{category.sign}}] {{category.name}}</option>
+            </ng-container>
+          </select>
+          <button type="button" [ngClass]="(categoriesService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('id_category')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Sign
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="categoriesService.filtersSearch.sign.value" name="sign" (ngModelChange)="categoriesService.actionFilterEvent($event, 'sign')">
+            <option value="-1">Ambos</option>
+            <option value="-">-</option>
+            <option value="+">+</option>
+          </select>
+          <button type="button" [ngClass]="(categoriesService.filtersSearch.sign.isFilter) ? 'close': 'btnFilter-disabled'" (click)="categoriesService.resetValuefiltroSearch('sign')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">Icon_Name</th>
+      <th scope="col" class="Encabezado-Tabla">Number</th>
+      <th scope="col" class="Encabezado-Tabla">Operación</th>
     </thead>
-    <tbody>
+    <tbody *ngIf="!categoriesService.isFilter()">
     <tr *ngFor="let category of categoriesService.Categories; let i = index" >
-      <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
-      <td class="Celdas-Tabla">{{category.cantidadRepetida}}</td>
-      <td class="Celdas-Tabla">{{category.id_backup}}</td>
-      <td class="Celdas-Tabla">{{category.id_category}}</td>
+      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+      <td class="Celdas-Tabla font-italic">{{category.repeated}}</td>
       <td class="Celdas-Tabla">{{category.id_account}}</td>
+      <td class="Celdas-Tabla">{{category.nameAccount}}</td>
+      <td class="Celdas-Tabla">{{category.id_category}}</td>
       <td class="Celdas-Tabla">{{category.name}}</td>
-      <td class="Celdas-Tabla">{{(category.sign == '-') ? 'Gastos': 'Ingresos'}}</td>
+      <td class="Celdas-Tabla">{{category.sign}}</td>
+      <td class="Celdas-Tabla">{{category.icon_name}}</td>
       <td class="Celdas-Tabla">{{category.number}}</td>
-      <!--td class="Celdas-Tabla">
-        <button class="btn btn-primary">Corregir</button>
-      </td-->
+      <td class="Celdas-Tabla">
+        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+          <span>
+            <fa-icon [icon]="util.faTools"></fa-icon>
+          </span>
+        </button>
+      </td>
     </tr>
     <div
+      [fromRoot]="true"
       infiniteScroll
       [infiniteScrollDistance]="2"
+      infiniteScrollContainer=".table-fixed-xl tbody"
       (scrolled)="onScroll()">
     </div>
+    <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+    <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
+    </tbody>
+    <tbody *ngIf="categoriesService.isFilter()">
+    <tr *ngFor="let category of categoriesService.categoriesFilter; let i = index" >
+      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+      <td class="Celdas-Tabla font-italic">{{category.repeated}}</td>
+      <td class="Celdas-Tabla">{{category.id_account}}</td>
+      <td class="Celdas-Tabla">{{category.nameAccount}}</td>
+      <td class="Celdas-Tabla">{{category.id_category}}</td>
+      <td class="Celdas-Tabla">{{category.name}}</td>
+      <td class="Celdas-Tabla">{{category.sign}}</td>
+      <td class="Celdas-Tabla">{{category.icon_name}}</td>
+      <td class="Celdas-Tabla">{{category.number}}</td>
+      <td class="Celdas-Tabla">
+        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+          <span>
+            <fa-icon [icon]="util.faTools"></fa-icon>
+          </span>
+        </button>
+      </td>
+    </tr>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
-
 </div>
