--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/preferences/preferences.component.html
@@ -16,35 +16,74 @@
 <div class="container text-center" *ngIf="preferencesService.Preferences.length == 0" style="margin-top: 200px;">
   <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
-<div *ngIf="preferencesService.Preferences.length > 0">
-  <table class="table table-hover ">
+
+<div *ngIf="preferencesService.Preferences.length > 0" class="overflow-x-scroll">
+  <table class="table table-hover table-fixed-xl">
     <thead class="thead-dark">
     <tr>
       <th scope="col" class="Encabezado-Tabla">#</th>
-      <th scope="col" class="Encabezado-Tabla">Cantidad repetida</th>
-      <th scope="col" class="Encabezado-Tabla">Id Backup</th>
-      <th scope="col" class="Encabezado-Tabla">key_name</th>
-      <th scope="col" class="Encabezado-Tabla">value</th>
-      <!--th scope="col" class="Encabezado-Tabla">Operación</th-->
+      <th scope="col" class="Encabezado-Tabla font-italic">Repeated</th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Key_Name
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="preferencesService.filtersSearch.key_name.value" name="key_name" (ngModelChange)="preferencesService.actionFilterEvent($event, 'key_name')">
+            <option value="-1" *ngIf="preferencesService.Preferences.length > 0">Todas</option>
+            <option *ngFor="let preference of preferencesService.Preferences" [value]="preference.key_name">{{preference.key_name}}</option>
+          </select>
+          <button type="button" [ngClass]="(preferencesService.filtersSearch.key_name.isFilter) ? 'close': 'btnFilter-disabled'" (click)="preferencesService.resetValuefiltroSearch('key_name')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">
+        <div class="row inline-grid">
+          Value
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="preferencesService.filtersSearch.value.value" name="value" (keyup)="preferencesService.actionFilterEvent($event, 'value', true)">
+          <button type="button" [ngClass]="(preferencesService.filtersSearch.value.isFilter) ? 'close': 'btnFilter-disabled'" (click)="preferencesService.resetValuefiltroSearch('value')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla">Operación</th>
     </thead>
-    <tbody>
+    <tbody *ngIf="!preferencesService.isFilter()">
     <tr *ngFor="let preference of preferencesService.Preferences; let i = index" >
-      <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
-      <td class="Celdas-Tabla">{{preference.cantidadRepetida}}</td>
-      <td class="Celdas-Tabla">{{preference.id_backup}}</td>
+      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+      <td class="Celdas-Tabla font-italic">{{preference.repeated}}</td>
       <td class="Celdas-Tabla">{{preference.key_name}}</td>
       <td class="Celdas-Tabla">{{preference.value}}</td>
-      <!--td class="Celdas-Tabla">
-        <button class="btn btn-primary">Corregir</button>
-      </td-->
+      <td class="Celdas-Tabla">
+        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+          <span>
+            <fa-icon [icon]="util.faTools"></fa-icon>
+          </span>
+        </button>
+      </td>
     </tr>
     <div
+      [fromRoot]="true"
       infiniteScroll
       [infiniteScrollDistance]="2"
+      infiniteScrollContainer=".table-fixed-xl tbody"
       (scrolled)="onScroll()">
     </div>
+    <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+    <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
+    </tbody>
+    <tbody *ngIf="preferencesService.isFilter()">
+    <tr *ngFor="let preference of preferencesService.preferencesFilter; let i = index" >
+      <td scope="row" class="Celdas-Tabla font-weight-bold">{{(i+1)}}</td>
+      <td class="Celdas-Tabla font-italic">{{preference.repeated}}</td>
+      <td class="Celdas-Tabla">{{preference.key_name}}</td>
+      <td class="Celdas-Tabla">{{preference.value}}</td>
+      <td class="Celdas-Tabla">
+        <button type="button" [disabled]="true" class="btn btn-primary btn-Mnt-Inconsistencia">
+          <span>
+            <fa-icon [icon]="util.faTools"></fa-icon>
+          </span>
+        </button>
+      </td>
+    </tr>
     </tbody>
   </table>
-  <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
-
 </div>
